products tabel added and product name and client name added dynamically

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
   development:
     adapter: postgresql
     encoding: utf8
-    database: medit8
-    username: techverx
-    password: techverx
+    database: inventory
+    username: postgres
+    password: salman
     host: localhost
